--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
       <span class="w3-jumbo w3-hide-small">Start something that matters</span><br>
       <span class="w3-xxlarge w3-hide-large w3-hide-medium">Start something that matters</span><br>
       <span class="w3-large">Coming Soon</span>
-      <p><a href="#about" class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off" hidden>Learn more and start today</a></p>
+      <p hidden><a href="#about" class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Learn more and start today</a></p>
     </div> 
     <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
-      <i class="fa fa-facebook-official w3-hover-opacity"></i>
+      <a href="https://www.facebook.com/Help-Quit-Coach-105667214335694" target="top"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
       <i class="fa fa-instagram w3-hover-opacity"></i>
     </div>
   </header>  
