--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="w3-top">
     <div class="w3-bar w3-white w3-card" id="myNavbar">
-      <a href="" class="w3-bar-item w3-button w3-wide">LOGO</a>
+      <a href="" class="w3-bar-item w3-button w3-wide">Help Quit Coach</a>
       <div class="w3-right w3-hide-small">
       </div>  
       <a href="javascript:void(0)" class="w3-bar-item w3-button w3-right w3-hide-large w3-hide-medium" onclick="bp_open()">
