--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
-    <title>Online Help - Menu</title>
+    <link rel="shortcut icon" href="/Images/favicon.png">
+    <link rel="apple-touch-icon" href="/Images/favicon.png">
+    <title>Help Quit Coach</title>
 </head>
 <body>
   <div class="w3-top">
