--- a/index.html
+++ b/index.html
@@ -5,16 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="style.css">
+    <script src="https://www.w3schools.com/lib/w3.js"></script>
+    <script src="https://kit.fontawesome.com/1212f2010d.js" crossorigin="anonymous"></script>
+    <script src="https://www.blockyplanet.com/script.js"></script>
+    <script src="https://www.blockyplanet.com/404.js"></script>
+    <script src="../script.js"></script>
+    <link rel="stylesheet" href="../style.css">
     <link rel="shortcut icon" href="/Images/favicon.png">
     <link rel="apple-touch-icon" href="/Images/favicon.png">
-    <title>Help Quit Coach</title>
+    <title>Help Quit Coach </title>
 </head>
 <body>
   <div class="w3-top">
-    <div class="w3-bar w3-white w3-card" id="myNavbar">
-      <a href="" class="w3-bar-item w3-button w3-wide">Help Quit Coach</a>
+    <div class="w3-bar w3-white w3-card" id="Navbar">
+      <a href="./" class="w3-bar-item w3-button w3-wide">Help Quit Coach</a>
       <div class="w3-right w3-hide-small">
       </div>  
       <a href="javascript:void(0)" class="w3-bar-item w3-button w3-right w3-hide-large w3-hide-medium" onclick="bp_open()">
@@ -25,18 +29,19 @@
   <nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-left w3-hide-medium w3-hide-large" style="display:none" id="mySidebar">
     <a href="javascript:void(0)" onclick="bp_close()" class="w3-bar-item w3-button w3-large w3-padding-16">Close ×</a>
   </nav>
-  <header class="bgimg-1 w3-display-container w3-grayscale-min" id="home">
+  <header class="bgimg-1 w3-display-container w3-grayscale-min " id="Home">
     <div class="w3-display-left w3-text-white" style="padding:48px">
-      <span class="w3-jumbo w3-hide-small">Start something that matters</span><br>
-      <span class="w3-xxlarge w3-hide-large w3-hide-medium">Start something that matters</span><br>
-      <span class="w3-large">Coming Soon</span>
-      <p hidden><a href="#about" class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Learn more and start today</a></p>
+      <span class="w3-jumbo w3-hide-small w3-animate-opacity">Start something that matters</span><br>
+      <span class="w3-xxlarge w3-hide-large w3-hide-medium w3-animate-opacity" >Start something that matters</span><br>
+      <span class="w3-large w3-animate-opacity">Coming Soon</span>
+      <p><a href="#about" class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-hover-opacity-off w3-animate-opacity">Start Today</a></p>
     </div> 
-    <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
-      <a href="https://www.facebook.com/Help-Quit-Coach-105667214335694" target="top"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
-      <i class="fa fa-instagram w3-hover-opacity"></i>
+    <div class="w3-display-bottomleft w3-large" style="padding:24px 48px">
+      <a href="https://www.facebook.com/Help-Quit-Coach-105667214335694" target="top"><i class="fab fa-facebook-square w3-text-white w3-hover-opacity w3-animate-opacity w3-hide-large w3-hide-medium"></i></a>
+      <a href="javascript:void(0)"><i class="fab fa-instagram w3-text-white w3-hover-opacity w3-animate-opacity w3-hide-large w3-hide-medium"></i></a>
+      <a href="https://www.facebook.com/Help-Quit-Coach-105667214335694" target="top"><i class="fab fa-facebook-square w3-text-grey w3-hover-opacity w3-animate-opacity w3-hide-small"></i></a>
+      <a href="javascript:void(0)"><i class="fab fa-instagram w3-text-grey w3-hover-opacity w3-animate-opacity w3-hide-small"></i></a>
     </div>
-  </header>  
-  <script src="script.js"></script>
+  </header>
 </body>
 </html>
