--- a/404.html
+++ b/404.html
@@ -2,6 +2,8 @@
 <html>
 <head>
  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+ <script src="https://www.blockyplanet.com/script.js"></script>
+ <script>ErrorAdvanced404();</script>
  <title>Help Quit Coach - 404</title>
 </head>
 <body>
@@ -9,5 +11,6 @@
   <h1 class="w3-opacity"><b>404 NOT FOUND</b></h1>
   <p class="w3-opacity">Um... Nothings here</p>
  </div>
+ <p id="ErrorNotFound"></p>
 </body>
 </html>
