--- a/404.html
+++ b/404.html
@@ -2,8 +2,6 @@
 <html>
 <head>
  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
- <script src="https://www.blockyplanet.com/script.js"></script>
- <script>ErrorAdvanced404();</script>
  <title>Help Quit Coach - 404</title>
 </head>
 <body>
@@ -12,5 +10,8 @@
   <p class="w3-opacity">Um... Nothings here</p>
  </div>
  <p id="ErrorNotFound"></p>
+ <script src="https://www.blockyplanet.com/script.js"></script>
+ <script src="https://www.blockyplanet.com/404.js"></script>
+ <script>ErrorAdvanced404();</script>
 </body>
 </html>
