--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <script src="https://kit.fontawesome.com/1212f2010d.js" crossorigin="anonymous"></script>
     <script src="https://www.blockyplanet.com/script.js"></script>
     <script src="https://www.blockyplanet.com/404.js"></script>
-    <script src="../script.js"></script>
-    <link rel="stylesheet" href="../style.css">
+    <script src="script.js"></script>
+    <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="/Images/favicon.png">
     <link rel="apple-touch-icon" href="/Images/favicon.png">
     <title>Help Quit Coach </title>
@@ -20,6 +20,7 @@
     <div class="w3-bar w3-white w3-card" id="Navbar">
       <a href="./" class="w3-bar-item w3-button w3-wide">Help Quit Coach</a>
       <div class="w3-right w3-hide-small">
+        <a href="Dashboard" class="w3-bar-item w3-button"><i class="fa fa-th"></i> PROGRAMS</a>
       </div>  
       <a href="javascript:void(0)" class="w3-bar-item w3-button w3-right w3-hide-large w3-hide-medium" onclick="bp_open()">
         <i class="fa fa-bars"></i>
@@ -28,17 +29,21 @@
   </div>
   <nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-left w3-hide-medium w3-hide-large" style="display:none" id="mySidebar">
     <a href="javascript:void(0)" onclick="bp_close()" class="w3-bar-item w3-button w3-large w3-padding-16">Close ×</a>
+    <a href="Dashboard" onclick="bp_close()" class="w3-bar-item w3-button">PROGRAMS</a>
   </nav>
   <header class="bgimg-1 w3-display-container w3-grayscale-min " id="Home">
     <div class="w3-display-left w3-text-white" style="padding:48px">
       <span class="w3-jumbo w3-hide-small w3-animate-opacity">Start something that matters</span><br>
       <span class="w3-xxlarge w3-hide-large w3-hide-medium w3-animate-opacity" >Start something that matters</span><br>
       <span class="w3-large w3-animate-opacity">Coming Soon</span>
+      <p><a href="#about" class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-hover-opacity-off w3-animate-opacity">Start Today</a></p>
     </div> 
     <div class="w3-display-bottomleft w3-large" style="padding:24px 48px">
       <a href="https://www.facebook.com/Help-Quit-Coach-105667214335694" target="top"><i class="fab fa-facebook-square w3-text-white w3-hover-opacity w3-animate-opacity w3-hide-large w3-hide-medium"></i></a>
+      <a href="javascript:void(0)"><i class="fab fa-facebook-messenger w3-text-white w3-hover-opacity w3-animate-opacity w3-hide-large w3-hide-medium"></i></a>
       <a href="javascript:void(0)"><i class="fab fa-instagram w3-text-white w3-hover-opacity w3-animate-opacity w3-hide-large w3-hide-medium"></i></a>
       <a href="https://www.facebook.com/Help-Quit-Coach-105667214335694" target="top"><i class="fab fa-facebook-square w3-text-grey w3-hover-opacity w3-animate-opacity w3-hide-small"></i></a>
+      <a href="javascript:void(0)"><i class="fab fa-facebook-messenger w3-text-grey w3-hover-opacity w3-animate-opacity w3-hide-small"></i></a>
       <a href="javascript:void(0)"><i class="fab fa-instagram w3-text-grey w3-hover-opacity w3-animate-opacity w3-hide-small"></i></a>
     </div>
   </header>
